# mars-rover-prop-m-blueprint

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/     workflows/: ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE.md  ci_colcon.yml  docs_build.yml  mkdocs.yml  sim_regression.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci_colcon.yml  sim_regression.yml
LICENSES/: hardware  software
analysis/: README.md
analysis/calibration/: README.md
analysis/calibration/configs/: control_defaults.yaml  estimator_defaults.yaml  terramechanics_defaults.yaml
analysis/calibration/tools/: fit_utils.py  io.py  metrics.py  plotting.py
configs/: README.md  rover_prop_m_mode.yaml  rover_v1.yaml
datasets/: README.md
datasets/schemas/: run_metadata.schema.json
docs/: 00_overview.md  01_system_architecture.md  10_requirements_prop-m.md  60_testing_vnv.md  70_datasets.md  80_licensing.md  interface_control_document.md  references.md  system_architecture.md
docs/20_hardware/: bom_matrix.md  electrical_architecture.md  mechanical_architecture.md
docs/30_models/: dynamics.md  kinematics.md  terramechanics.md
docs/40_control/: low_level_control.md  planning_and_autonomy.md  state_estimation.md
docs/50_simulation/: gazebo.md  pybullet.md  webots.md
infrastructure/ docker/: .dockerignore  Dockerfile.ci  Dockerfile.dev  Dockerfile.runtime  README.md  docker-compose.yml  env.example
infrastructure/ docker/scripts/: build_ws.sh  entrypoint_ros.sh  run_sim_smoke.sh
infrastructure/devcontainer/: .bashrc  Dockerfile  devcontainer.json  post_create.sh  ros_entrypoint.sh
ros_ws/: README.md
ros_ws/src/: rover_bringup  rover_control  rover_description  rover_drivers  rover_estimation  rover_mission_bt  rover_msgs  rover_navigation  rover_sim_gazebo  rover_tools
ros_ws/src/rover_bringup/: __init__.py  package.xml  setup.py
ros_ws/src/rover_bringup/launch/: bringup.launch.py  hw_bringup.launch.py  nav2_bringup.launch.py  sim_bringup.launch.py
ros_ws/src/rover_bringup/params/: common.yaml
ros_ws/src/rover_bringup/params/modes/: modern.yaml  prop_m.yaml
ros_ws/src/rover_bringup/rover_bringup/: __init__.py
ros_ws/src/rover_control/: package.xml  setup.py
ros_ws/src/rover_description/: CMakeLists.txt  package.xml
ros_ws/src/rover_description/config/: ros2_control.yaml
ros_ws/src/rover_description/launch/: description.launch.py
ros_ws/src/rover_description/urdf/: rover.urdf.xacro  rover_core.xacro  rover_gazebo.xacro  rover_inertials.xacro  rover_materials.xacro  rover_transmissions.xacro
ros_ws/src/rover_drivers/rover_driver_base/: README.md  package.xml  setup.py
ros_ws/src/rover_drivers/rover_driver_base/rover_driver_base/: __init__.py  sim_contacts_node.py  sim_encoder_node.py  sim_imu_node.py  sim_motor_interface_node.py
ros_ws/src/rover_drivers/rover_drivers/: CMakeLists.txt  package.xml
ros_ws/src/rover_estimation/: CMakeLists.txt  README.md  package.xml
ros_ws/src/rover_estimation/config/: ekf_modern.yaml  ekf_prop_m.yaml
ros_ws/src/rover_estimation/launch/: ekf.launch.py
ros_ws/src/rover_mission_bt/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/rover_msgs/: CMakeLists.txt  package.xml
ros_ws/src/rover_msgs/msg/: RunMetadata.msg  SoilProbe.msg  TactileBar.msg  TactileBars.msg
ros_ws/src/rover_navigation/: CMakeLists.txt  README.md  package.xml
ros_ws/src/rover_navigation/launch/: nav2.launch.py
ros_ws/src/rover_navigation/params/: nav2_modern.yaml  nav2_prop_m.yaml
ros_ws/src/rover_navigation/params/costmaps/: global_costmap_common.yaml  local_costmap_common.yaml
ros_ws/src/rover_navigation/params/plugins/: controllers.yaml  planners.yaml  recoveries.yaml
ros_ws/src/rover_sim_gazebo/: CMakeLists.txt  README.md  package.xml
ros_ws/src/rover_sim_gazebo/config/: sensors_modern.yaml  sensors_prop_m.yaml  terrain_presets.yaml
ros_ws/src/rover_sim_gazebo/launch/: sim.launch.py  spawn_rover.launch.py
ros_ws/src/rover_sim_gazebo/models/terrain/regolith_dune_patch/: model.config  model.sdf
ros_ws/src/rover_sim_gazebo/models/terrain/regolith_flat/: model.config  model.sdf
ros_ws/src/rover_sim_gazebo/plugins/: CMakeLists.txt
ros_ws/src/rover_sim_gazebo/plugins/include/rover_sim_gazebo/: terrain_preset_plugin.hpp
ros_ws/src/rover_sim_gazebo/plugins/src/: terrain_preset_plugin.cpp
ros_ws/src/rover_sim_gazebo/worlds/: mars_dune_field.sdf  mars_flat.sdf  mars_incline_10deg.sdf
ros_ws/src/rover_tools/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/rover_tools/config/: metrics_spec.yaml  record_topics_full.yaml  record_topics_minimal.yaml
ros_ws/src/rover_tools/rover_tools/: __init__.py  bag_export.py  bag_record.py  cli.py  dataset_package.py  metrics_eval.py  schema_validate.py  utils.py
scenarios/lander_tether_site/: README.md  scenario.yaml
scenarios/lander_tether_site/datasets/: expected_artifacts.md
scenarios/lander_tether_site/hazards/: hazard_register.md
scenarios/lander_tether_site/map/: map.yaml
scenarios/lander_tether_site/missions/: modern_cycle.yaml  prop_m_cycle.yaml
scenarios/lander_tether_site/references/: sources.md
scenarios/mars_dunes/: README.md  scenario.yaml
scenarios/mars_dunes/datasets/: expected_artifacts.md
scenarios/mars_dunes/hazards/: hazard_register.md
scenarios/mars_dunes/map/: map.pgm
scenarios/mars_dunes/missions/: modern_cycle.yaml
scenarios/mars_dunes/references/: sources.md
scenarios/mars_dunes/terrain/: dune_field_spec.md  terramechanics_targets.md
scenarios/mars_flat/: README.md  scenario.yaml
scenarios/mars_flat/datasets/: expected_artifacts.md
scenarios/mars_flat/hazards/: hazard_register.md
scenarios/mars_flat/references/: sources.md
scenarios/mars_rocks/: README.md  scenario.yaml
scenarios/mars_rocks/datasets/: expected_artifacts.md
scenarios/mars_rocks/hazards/: hazard_register.md
scenarios/mars_rocks/missions/: prop_m_cycle.yaml
scripts/: evaluate_metrics.py  export_bag.py  run_sim_batch.py
(+19 files in other folders)
