<?xml version="1.0"?>
<package format="3">
  <name>rover_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro description package for Mars Rover Prop-M Blueprint.</description>

  <maintainer email="engineering@elion.com">Elion Dynamics Engineering</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
