<?xml version="1.0"?>
<package format="3">
  <name>rover_estimation</name>
  <version>0.1.0</version>
  <description>State estimation bringup using robot_localization EKF. Publishes /odometry/filtered and odom->base_link TF.</description>

  <maintainer email="unknown@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
