<?xml version="1.0"?>
<package format="3">
  <name>rover_msgs</name>
  <version>0.1.0</version>
  <description>Custom interface messages for rover sensors and dataset/run traceability.</description>

  <maintainer email="engineering@elion.com">Elion Dynamics Engineering</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
