<?xml version="1.0"?>
<package format="3">
  <name>rover_sim_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation assets: worlds, terrain presets, sensors, and world plugins for the rover.</description>

  <maintainer email="engineering@elion.com">Elion Dynamics Engineering</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <build_depend>gazebo_dev</build_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Gazebo (classic vs gz) varies by distro; keep dependencies minimal here -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
