<?xml version="1.0"?>
<package format="3">
  <name>rover_driver_base</name>
  <version>0.1.0</version>
  <description>Driver-layer boundary package providing simulation bridge nodes and hardware-facing interface placeholders.</description>

  <maintainer email="engineering@elion.com">Elion Dynamics Engineering</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
